plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    testImplementation 'org.testng:testng:7.7.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'com.jwbutler.rpg.Main'
}

tasks.named('test') {
    useTestNG()
}

// https://docs.gradle.org/current/userguide/building_java_projects.html#sec:feature_preview
// This is specifically for JEP 406, "Enhanced Switch"
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
